Initial attempted fixing of spacing of hyperlinks.

--- a/assets/css/SDPStyling.css
+++ b/assets/css/SDPStyling.css
@@ -160,14 +160,19 @@ h1 {
     margin-bottom: 10px;
     display: grid;
     grid-template-columns: repeat(auto-fit, 20px);
-    grid-template-rows: 30px 20px 20px;
+    grid-template-rows: repeat(auto-fit, 20px);
     grid-gap: 10px;
-    text-align: justify;
-    text-justify: auto;
+    /* text-align: justify; */
+    /* text-justify: auto; */
 }
 
 .hyperlink-grid-cell {
     background: yellow;
+    /* text-align: center; */
+    /* text-justify: center; */
+    justify-items: center;
+    align-items: center;
+    text-align: center;
 }
 
 h2 {
@@ -415,15 +420,15 @@ html {
     }
     .header-navigation-content {
         grid-template-columns: repeat(auto-fit, 16px);
-        grid-template-rows: 15px;
-        grid-template-rows: repeat(auto-fit, 16px);
-        grid-gap: 10px;
+        /* grid-template-rows: 15px; */
+        /* grid-template-rows: repeat(auto-fit, 16px); */
+        grid-gap: 15px;
         column-gap: 20px;
-        margin-bottom: 0px;
+        margin: 0px;
     }
     h2 {
-        font-size: 8pt;
-        line-height: 10px;
+        font-size: 10pt;
+        /* line-height: 10px; */
     }
     .acronym-grid-section {
         grid-template-columns: 20px auto 70%;
